fixed dialog texts not showing

--- a/app/styles/root.scss
+++ b/app/styles/root.scss
@@ -21,7 +21,7 @@ body, html, .container{
 
 .rtl{
   direction: rtl;
-  font-family: Alef;
+//  font-family: Alef;
 }
 
 .right{
